fix scrollbar

--- a/css/game.styl
+++ b/css/game.styl
@@ -7,6 +7,77 @@ noselect()
               user-select: none
 
 
+.scrollbar-wrap
+    width:100%
+    height: 100%
+    overflow: hidden
+    position: relative
+    .native
+        overflow-y: scroll
+        overflow-x: hidden
+        width:200%
+    .s-content
+        overflow: hidden
+        width: 50%
+
+scrollbar(h)
+    .native
+        height: h
+
+winHfont()
+    font-family: Impact
+    text-shadow: 1px 1px 1px black
+    color: white
+
+
+
+/*.custom_scroll_bar_handle
+    top:0
+    right:0
+    position:absolute
+    width:10px
+    height:15px
+    background:#c00
+    cursor:pointer
+    */
+
+
+//.custom_scroll_bar_handle:hover
+//    background:red
+
+
+
+
+
+
+.tooltip
+    display: none
+    top: -50px
+
+    position: absolute
+    margin-left: -50px
+    width: 100px
+    height: 20px
+    line-height: 20px
+    padding: 10px
+    font-size: 14px
+    text-align: center
+    color: white
+    background: rgba(0,0,0, 0.6)
+    &:after
+        content: ""
+        position: absolute
+        border-width: 10px
+        border-style: solid
+        border-color: rgba(0,0,0, 0.6) transparent transparent transparent
+        top: 40px
+        left: 50px
+
+runtooltip()
+    &:hover .tooltip
+        display: block
+
+
 html, body
     overflow: hidden
     padding: 0
@@ -162,13 +233,13 @@ html, body
 
 
 #target-bar
-    background: url("/ui/target.png")
+    background: no-repeat url("/ui/target.png")
     position:absolute
     width: 159px
-    height: 41px
+    //height: 41px
+    height: 100px
     top: 10px
-    left: 50%
-    margin-left: -75px
+    left: 45%
     line-height: 58px
     font-size: 14px
     //font-family: Impact
@@ -224,9 +295,6 @@ html, body
     height: 424px
     background: url("/ui/win-bg.png")
     position: absolute
-    font-family: Impact
-    text-shadow: 1px 1px 1px black
-    color: white
 
     .close
         position: absolute
@@ -238,6 +306,8 @@ html, body
             background: url("/ui/win-close.png")
 
     .title
+        winHfont()
+        cursor: move
         text-align: center
         width: 274px
         height: 47px
@@ -288,7 +358,7 @@ html, body
         text-align: center
         border: 0
         padding: 0
-        margin: 0
+        margin: 5px
         padding-bottom: 4px
         font-family: Impact
         text-shadow: 1px 1px 1px black
@@ -323,10 +393,18 @@ html, body
     .content.paper
         background: no-repeat url("/ui/win-paper.png")
         font-family: sans-serif
-        padding: 45px 35px 40px 10px
+        padding: 45px 35px 10px 10px
         position: relative
         color: #46290e
         box-shadow: none
+
+        scrollbar(363px - 42px - 10px)
+        .h
+            font-size: 14px
+            color: #356e0b
+            font-weight: bold
+        p
+            font-size: 12px
 
         .sello
             position: absolute
@@ -365,6 +443,7 @@ html, body
         height:32px
 
     #gold
+        winHfont()
         background: no-repeat url("/ui/win-x-gold.png")
         position: absolute
         width: 70px
@@ -389,6 +468,9 @@ html, body
         padding-left: 15px
 
     .icon
+        position: relative
+        runtooltip()
+
         background: url("/ui/sys-icons.png")
         width: 26px
         height: 26px
